@startuml

package "inmem" {
    class InMemoryInvoiceRepository {
        invoices: []*domain.Invoice
        SelectSatisfying(InvoiceSpecification): ([]*Invoice, error)
        SelectWhereGracePeriodPast(time.Time): ([]*Invoice, error)
        whereGracePeriodPastSQL(time.Time): string
    }
}

package "app" {
    class ListGracePeriodPastInvoiceUseCase {
        repository domain.InvoiceRepository
        Execute(): (*ListGracePeriodPastInvoiceResponse, error)
    }
    class ListGracePeriodPastInvoiceResponse {
        Invoices []*domain.Invoice
    }
    ListGracePeriodPastInvoiceResponse <-- ListGracePeriodPastInvoiceUseCase
}

package "domain" {
    interface InvoiceRepository {
        SelectSatisfying(spec InvoiceSpecification) ([]*Invoice, error)
        SelectWhereGracePeriodPast(aDate time.Time) ([]*Invoice, error)
    }
    class Invoice {
        ID: string
        Total: int
        DueDate: time.Time
    }
    interface InvoiceSpecification {
        SatisfyingElementsFrom(InvoiceRepository): ([]*Invoice, error)
    }
    class DelinquentInvoiceSpecification {
        currentDate: time.Time
        SatisfyingElementsFrom(InvoiceRepository): ([]*Invoice, error)
    }

    InvoiceRepository <|-- InMemoryInvoiceRepository
    InvoiceRepository <-- ListGracePeriodPastInvoiceUseCase
    InvoiceRepository <-- DelinquentInvoiceSpecification
    InvoiceRepository <-- InvoiceSpecification
    InvoiceSpecification <-- InvoiceRepository
    InvoiceSpecification <-- InMemoryInvoiceRepository
    DelinquentInvoiceSpecification <-- ListGracePeriodPastInvoiceUseCase
    InvoiceSpecification <|-- DelinquentInvoiceSpecification
    Invoice <-- ListGracePeriodPastInvoiceUseCase
    Invoice <-- InMemoryInvoiceRepository
}
@enduml